# OMNIA-SECURITY

./: .gitignore  .zenodo.json  CITATION.cff  COLAB_FIRST_SECURITY_RUN_V0.md  COLAB_SECOND_SECURITY_RUN_V0.md  FIRST_SECURITY_EXPERIMENT.md  FIRST_SECURITY_EXPERIMENT_RESULTS.md  README.md  RUN_ALL_SECURITY_EXPERIMENTS.py  SECOND_SECURITY_EXPERIMENT.md  SECOND_SECURITY_EXPERIMENT_RESULTS.md  SECURITY_AT_A_GLANCE.md  SECURITY_CASES.md  SECURITY_EXTERNAL_RUN.md  ecosystem_manifest.json  pyproject.toml  run_first_security_experiment.py  run_second_security_experiment.py
.github/workflows/: ci.yml
archive/readme-history/: README.before-clickable-links-repair-20260520T140840Z.md  README.before-doi-release-20260520T134558Z.md
docs/: BACKBONE_COMPLIANCE.md  DIAGNOSTIC_CONTRACT.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  NOT_A_SCANNER_NOT_A_VERDICT.md  OMNIA_SECURITY_PUBLIC_POSITION.md  PRODUCTION_READINESS.md  QUICKSTART_SECURITY.md  REPOSITORY_STATUS.md  RESULTS_INDEX.md  RISK_SIGNAL_BOUNDARY.md  SECURITY_DECISION_BOUNDARY.md  SECURITY_MANIFEST.json  SECURITY_OVERVIEW.md  SECURITY_SCOPE.md  STRUCTURAL_OBSERVABILITY_ROLE.md
examples/: omnia_security_minimal_diagnostic.json  safe_security_events.jsonl  sample_security_events.jsonl
omnia_security/: __init__.py  backbone_domain_adapter.py
omnia_security_auditor/: cli.py  core.py
tests/: test_backbone_domain_adapter.py  test_omnia_security_auditor.py  test_repository_smoke.py
