[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnia-security"
version = "0.1.0"
description = "Bounded structural diagnostics for security-relevant behavior."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Massimiliano Brighindi", email = "brighissimo@users.noreply.github.com" }
]
license = { file = "LICENSE" }
keywords = ["omnia", "security", "structural-diagnostics", "post-hoc-measurement", "fragility"]

[project.urls]
Repository = "https://github.com/Tuttotorna/OMNIA-SECURITY"
DOI = "https://doi.org/10.5281/zenodo.19879356"

[tool.setuptools]
py-modules = []


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]


[tool.setuptools.packages.find]
include = ["omnia_security*"]


[tool.ruff]
target-version = "py310"
line-length = 88
